--- a/portfilo.css
+++ b/portfilo.css
@@ -117,3 +117,59 @@ padding-top: 30px;}
         padding: 30px;
         font-family: 'Dancing Script', cursive;
         }
+.skills{
+    
+    height: 150px;
+    width: 100%;
+    margin: 70px;
+    padding-left: 420px;
+    
+}
+
+.dropdown-toggle{
+    background-color:#451818;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: auto;
+    
+}
+.project-heading{
+    grid-column: 1/4;
+    height: 50px;
+    background-color: #4a0000;
+    color: #ffffff;
+    text-align: center;
+    padding: 5px;
+    
+    }
+    .project-container{
+        background-color: #f1f1f1;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        height: 400px;
+        gap:10px;
+        margin:5px;
+        padding: 5px;
+        border-bottom:5px solid #451818;
+        width: 100%;
+        }
+        .project-container img{
+            width: 65%;
+            height: 140px;
+        
+        }
+        .box1 button {
+            border:none;
+            background: rgb(68, 14, 14);
+            color: #f0f0f2;
+            border-radius: 5px;
+            padding: 5px;
+          }
+          
+          .box1 button:hover {
+            border-right: 2px solid black;
+          }
